test/log/shift/vsll_vi_u32_m.txt
vsll_vi_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsll_vi_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsll_vi_u32_m.c:30:6: warning: no previous prototype for 'vsll_vi_u32_m_golden' [-Wmissing-prototypes]
   30 | void vsll_vi_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vsll_vi_u32_m.c: In function 'vsll_vi_u32_m_golden':
vsll_vi_u32_m.c:30:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vsll_vi_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vsll_vi_u32_m.c:30:70: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vsll_vi_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vsll_vi_u32_m.c: In function 'main':
vsll_vi_u32_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsll_vi_u32_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
vsll_vi_u32_m.c:43:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   43 |     uint32_t imm;
      |              ^~~
vsll_vi_u32_m.c:52:5: warning: 'mask' is used uninitialized in this function [-Wuninitialized]
   52 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/bin/../lib/gcc/riscv32-rivai-elf/10.2.1/../../../../riscv32-rivai-elf/bin/ld: /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.o: in function `main':
/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test/vsll_vi_u32_m.c:52: undefined reference to `data_init_bool'
collect2: error: ld returned 1 exit status
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.elf] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsll_vi_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsll_vi_u32_m.c
Linking....
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/bin/riscv32-rivai-elf-gcc -o /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.elf /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.o -T/opt/analog/riscv/1.0.1/Riscv/software/target/bare/link.ld -nostartfiles -static -nostdlib -L/opt/analog/riscv/1.0.1/Riscv/software/target/common/lib/ -ldsp -lbare -lm -lc -lgcc
Makefile:85: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.elf' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed